2009-12-27  Peter Schuster   <typo3@peschuster.de>

	* makes use of typo3 autoloader
	* raised version requirements for typo3 to v4.3.0
	* on ajax request $GLOBALS['TSFE']->id is set (e.g. for tx_smilie)
	* adjusted smilie hook to tx_smilie version 1.0.0

2009-12-26  Peter Schuster   <typo3@peschuster.de>

	* added caching of full ajax requests
	* updated documentation

2009-09-12  Peter Schuster   <typo3@peschuster.de>

	* changed database colum 'userid' to int(11) - fixes bug #4605
	* small rafactoring chages in api and ajax class

2009-08-08  Peter Schuster   <typo3@peschuster.de>

	* added span with css class around username in default template
	* displayed field of user table now configurable by typoscript

2009-04-28  Peter Schuster   <typo3@peschuster.de>

	* eyeryone can see the message list now
	* sending messages is still limited to logged in users
	* released version 0.2.1

2009-03-17 Peter Schuster  <typo3@peschuster.de>

	* plugin makes use of cache_hash
	* tx_smilie hook class refactored -> tx_smilie->__constuct is called only once
	* released version 0.2.0

2009-03-12 Peter Schuster  <typo3@peschuster.de>

	* Initial release