@@ -4,6 +4,8 @@
 	* raised version requirements for typo3 to v4.3.0
 	* on ajax request $GLOBALS['TSFE']->id is set (e.g. for tx_smilie)
 	* adjusted smilie hook to tx_smilie version 1.0.0
+	* changed type of ajax request for shoutbox update to 'get'
+	* removed 'no messages available' string from ajax response
 
 2009-12-26  Peter Schuster   <typo3@peschuster.de>
 
